2005-11-13  Stephane Arnold <sarnold75@users.sourceforge.net>

        * bigfloat2.tcl : bug fix in trigonometry, functions may have
          return a number more precise than the input
        * bignum.tcl : a little performance enhancement by avoiding
          the use of [upvar] in [_treat]
        * bigfloat2.test : minor changes
        * bigfloat.man : rewriting 40% of the documentation that
          now covers both 1.2 and 2.0 versions

2005-11-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl: Reworked the extended package index a bit to keep
	  the general existing structure.

2005-11-13  Stephane Arnold <sarnold75@users.sourceforge.net>

        * bigfloat2.tcl,bigfloat2.test : two files
          forming the math::bigfloat package for Tcl 8.5
        * pkgIndex.tcl : updated to handle the different Tcl versions
          Tcl 8.4 still has math::bigfloat 1.2

2005-11-04  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * roman.test: removed extraneous messages

2005-10-26  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * qcomplex.tcl: error in the computation of the complex 
                        cosine. Found by Oscar Andreas Lopez.

2005-10-21  Andreas Kupries <andreask@activestate.com>

	* interpolate.test: Reduced requirement for struct down to
	* interpolate.tcl:  struct::matrix, as that is the only structure
	  used by this package. This means that we are loading 272 KB less
	  (344 KB - 72 KB). Also fixed the testsuite header code.

2005-10-10  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * fixed one bug regarding cov in misc.tcl

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl: Updated all version numbers to be in sync with the
	* bignum.man:   changes made to the various packages in this module.